[package]
name = "domain-engine-datafusion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
domain-engine-arrow.path = "../domain-engine-arrow"
tracing.workspace = true
chrono.workspace = true
arrow = { version = "55", default-features = false }
async-stream = "0.3"
async-trait = "0.1"
datafusion-catalog = "47"
datafusion-common = "47"
datafusion-expr = "47"
datafusion-execution = "47"
datafusion-physical-expr = "47"
datafusion-physical-plan = "47"
futures-util = "0.3"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine-test-utils"
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
datafusion = { version = "47", default-features = false }
indoc = "2"
pretty_assertions = "1"
bytes = "1"
