[package]
name = "domain-engine-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
juniper.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
thiserror.workspace = true
smartstring = { version = "1", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
domain-engine-store-inmemory.path = "../domain-engine-store-inmemory"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
tokio.workspace = true
unimock.workspace = true
async-trait = "0.1"
pretty_assertions = "1"
graphql-parser = "0.4"
