[package]
name = "domain-engine-graphql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
arcstr.workspace = true
base64 = "0.22"
chrono = "0.4"
compact_str = { version = "0.8", features = ["serde"] }
futures-util = "0.3"
fnv.workspace = true
juniper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }
tracing.workspace = true


[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-store-inmemory.path = "../domain-engine-store-inmemory"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
tokio.workspace = true
unimock.workspace = true
async-trait = "0.1"
pretty_assertions = "1"
graphql-parser = "0.4"
