[package]
name = "domain-engine-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
prost = "0.12"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
tokio.workspace = true
pretty_assertions = "1"
