[package]
name = "domain-engine-httpjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
axum-extra = { version = "0.9", features = ["json-lines"] }
tokio-stream = "0.1"
http = "1"
bytes = "1"
mime = "0.3"
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
tokio.workspace = true
pretty_assertions = "1"
tower = "0.4"
http-body-util = "0.1"
