[package]
name = "domain-engine-httpjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream = "0.3"
automerge = "0.5"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["json-lines"] }
bytes = "1"
futures-util = "0.3"
hex = "0.4"
http = "1"
mime = "0.3"
minicbor = { version = "0.25.1", default-features = false, features = ["alloc"] }
postcard.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid = "1"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
ontol-examples.path = "../../ontol/ontol-examples"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
pretty_assertions = "1"
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2"] }
reqwest-websocket = "0.4"
ulid = "1"
