[package]
name = "domain-engine-juniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
smartstring.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
thiserror.workspace = true
base64 = "0.22"
hex = "0.4"

[dependencies.juniper]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
default-features = false
features = ["schema-language"]

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
domain-engine-in-memory-store.path = "../domain-engine-in-memory-store"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
test-log.workspace = true
tokio.workspace = true
unimock.workspace = true
async-trait = "0.1"
pretty_assertions = "1"
graphql-parser = "0.4"

[build-dependencies]
domain-engine-test-templates.path = "../domain-engine-test-templates"
