[package]
name = "domain-engine-store-pg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
async-stream = "0.3"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
deadpool = "0.12"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-protocol = "0.6"
postgres-types = { version = "0.2", features = ["derive"] }
fnv.workspace = true
smallvec.workspace = true
indexmap.workspace = true
tracing.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
ordered-float.workspace = true
arcstr.workspace = true
postcard.workspace = true
anyhow = "1"
refinery = { version = "0.8", default-features = false, features = ["tokio-postgres"] }
ulid = { version = "1", features = ["postgres"] }
indoc = "2"
bytes = "1"
compact_str = "0.8"
thin-vec.workspace = true
chrono.workspace = true
pin-utils = "0.1"
fallible-iterator = "0.2"
byteorder = "1"
displaydoc = "0.2"
automerge = "0.5"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
uuid.workspace = true
pretty_assertions = "1"
