[package]
name = "domain-engine-tantivy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
domain-engine-core.path = "../domain-engine-core"
tracing.workspace = true
thin-vec.workspace = true
smallvec.workspace = true
async-trait = "0.1"
anyhow = "1"
chrono = "0.4"
displaydoc = "0.2"
futures-util = "0.3"
tantivy = "0.22"
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-util = "0.7"

[dev-dependencies]
ontol-test-utils.path = "../../ontol/ontol-test-utils"
ontol-macros.path = "../../ontol/ontol-macros"
domain-engine-test-utils.path = "../domain-engine-test-utils"
tracing-subscriber.workspace = true
pretty_assertions = "1"
