[package]
name = "domain-engine-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
ontol-test-utils.path = "../../ontol/ontol-test-utils"
domain-engine-core.path = "../domain-engine-core"
domain-engine-graphql.path = "../domain-engine-graphql"
domain-engine-store-inmemory.path = "../domain-engine-store-inmemory"
domain-engine-store-arango.path = "../domain-engine-store-arango"
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
chrono.workspace = true
ordered-float.workspace = true
unimock.workspace = true
juniper.workspace = true
async-trait = "0.1"
graphql-parser = "0.4"
tracing = "0.1"
anyhow = "1"
reqwest-middleware = "0.3"
reqwest = { version = "0.12", default-features = false }
