[package]
name = "domain-engine-test-utils"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
ontol-runtime.path = "../../ontol/ontol-runtime"
ontol-test-utils.path = "../../ontol/ontol-test-utils"
domain-engine-core = { path = "../domain-engine-core", features = ["unimock"] }
domain-engine-graphql.path = "../domain-engine-graphql"
domain-engine-store-arango.path = "../domain-engine-store-arango"
domain-engine-store-inmemory.path = "../domain-engine-store-inmemory"
domain-engine-store-pg.path = "../domain-engine-store-pg"
domain-engine-tantivy.path = "../domain-engine-tantivy"
tokio = { version = "1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
fnv.workspace = true
chrono.workspace = true
ordered-float.workspace = true
unimock.workspace = true
juniper.workspace = true
futures-util = "0.3"
async-trait = "0.1"
graphql-parser = "0.4"
tracing = "0.1"
reqwest-middleware = "0.3"
reqwest = { version = "0.12", default-features = false }
axum = { version = "0.7", default-features = false }
