[package]
name = "domain-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ontol-runtime.path = "../../ontol-runtime"
domain-engine-juniper.path = "../domain-engine-juniper"
domain-engine-core.path = "../domain-engine-core"
domain-engine-in-memory-store.path = "../domain-engine-in-memory-store"
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
smartstring.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
axum = "0.6"
anyhow = "1"
tower-http = { version = "0.4", features = ["trace"] }
tikv-jemallocator = "0.5"

[dependencies.juniper_axum]
git = "https://github.com/protojour/juniper"
branch = "protojour-mods"
